# 0.00.24 (56682) Sep 19, 2011
Fluid flow: Fixed: Exception when dragging the fluid flow rate slider on mac
# 0.00.23 (56552) Sep 14, 2011
# 0.00.22 (56499) Sep 13, 2011
Water tower: Made the velocity sensor read out "-" instead of "0.00" when not over a moving fluid
Water tower: Ignore speed readout for water coming out of the faucet
Water tower: Fixed: Speed for water coming out of the faucet varies erratically
# 0.00.21 (56380) Sep 9, 2011
Pressure tab: When in "atmospheres" units, use metric for fluid density
Water tower: Made the "fill" button match size, font and color of the "reset all" button
# 0.00.20 (56353) Sep 9, 2011
Flow tab: Improved performance by about 30% by using Collections.min instead of Collections.sort
Water tower: Don't start the tank at the maximum height so the user can drag it up and down
Water tower: Added a button to fill up the water tank
Water tower: Made faucets remain on instead of snapping to zero when the user lets go
Moved the red door in front of the hose
Removed decimals from flow rate and fluid density sliders
Water tower: Extended the handle to make it more visible
Water tower: Fixed: Arrows on the hose nozzle change length as a function of angle
# 0.00.19 (56286) Sep 7, 2011
Water tower: Changed to cursor hand with indicator arrows for hose nozzle rotation
# 0.00.18 (56265) Sep 7, 2011
Water tower: Added a static cursor for the hose nozzle rotation
# 0.00.17 (56189) Sep 5, 2011
Water tower: show arrow cursors for dragging the hose and rotating the nozzle, see #3061
# 0.00.16 (56082) Sep 2, 2011
Water tower: Added drag handles onto the hose and nozzle
Water tower: Made the hose draggable
Water tower: Added a nozzle graphic for the hose
Moved the water tower slightly to the left
Moved fluid density controls to the bottom right in all tabs
Moved reset all button directly under the control panel in all tabs
Pressure: Moved the control panel to the top right to match the other tabs
Fixed control panel insets in all tabs