@@ -1,3 +1,4 @@
+Fluid flow: Fixed: Exception when setting fluid flow rate to zero
 # 0.00.24 (56682) Sep 19, 2011
 Fluid flow: Fixed: Exception when dragging the fluid flow rate slider on mac
 # 0.00.23 (56552) Sep 14, 2011
